--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.6"
+  },
+  "dependencies": {
+    "axios": "^1.6.3"
   }
 }
