Animation added to hamMenu
HamMenu button will do a subtle animation when open or close

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A movie app for search new, recents, popular movies",
   "main": "index.js",
   "scripts": {
-    "tail:watch": "npx tailwindcss -i ./src/input.css -o ./public/assets/app.css --watch"
+    "tail:watch": "npx tailwindcss -i ./src/input.css -o ./public/assets/app.css --watch --minify"
   },
   "keywords": [
     "Javascript"
