--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "tail:watch": "npx tailwindcss -i ./src/input.css -o ./public/assets/app.css --watch --minify"
+    "tail:watch": "npx tailwindcss -i ./src/input.css -o ./public/assets/app.css --watch",
+    "build": "npx tailwindcss -i ./src/input.css -o ./public/assets/app.css && webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.config.dev.js"
   },
   "keywords": [
     "Javascript"
@@ -13,9 +15,25 @@
   "author": "Alexis Liao <Alexisliao10@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
+    "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.1",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "terser-webpack-plugin": "^5.3.10",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "axios": "^1.6.3"
